; ModuleID = '/home/carl/AnghaBench/libevent/extr_evutil.c_evutil_v6addr_is_local_.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_evutil.c_evutil_v6addr_is_local_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i64 }

@evutil_v6addr_is_local_.ZEROES = internal constant [17 x i8] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evutil_v6addr_is_local_(%struct.in6_addr* %0) #0 {
  %2 = alloca %struct.in6_addr*, align 8
  %3 = alloca i8*, align 8
  store %struct.in6_addr* %0, %struct.in6_addr** %2, align 8
  %4 = load %struct.in6_addr*, %struct.in6_addr** %2, align 8
  %5 = getelementptr inbounds %struct.in6_addr, %struct.in6_addr* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @memcmp(i8* %8, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @evutil_v6addr_is_local_.ZEROES, i64 0, i64 0), i32 8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %50

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 0
  %14 = load i8, i8* %13, align 1
  %15 = zext i8 %14 to i32
  %16 = and i32 %15, 254
  %17 = icmp eq i32 %16, 252
  br i1 %17, label %50, label %18

18:                                               ; preds = %11
  %19 = load i8*, i8** %3, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 0
  %21 = load i8, i8* %20, align 1
  %22 = zext i8 %21 to i32
  %23 = icmp eq i32 %22, 254
  br i1 %23, label %24, label %31

24:                                               ; preds = %18
  %25 = load i8*, i8** %3, align 8
  %26 = getelementptr inbounds i8, i8* %25, i64 1
  %27 = load i8, i8* %26, align 1
  %28 = zext i8 %27 to i32
  %29 = and i32 %28, 192
  %30 = icmp eq i32 %29, 128
  br i1 %30, label %50, label %31

31:                                               ; preds = %24, %18
  %32 = load i8*, i8** %3, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 0
  %34 = load i8, i8* %33, align 1
  %35 = zext i8 %34 to i32
  %36 = icmp eq i32 %35, 254
  br i1 %36, label %37, label %44

37:                                               ; preds = %31
  %38 = load i8*, i8** %3, align 8
  %39 = getelementptr inbounds i8, i8* %38, i64 1
  %40 = load i8, i8* %39, align 1
  %41 = zext i8 %40 to i32
  %42 = and i32 %41, 192
  %43 = icmp eq i32 %42, 192
  br i1 %43, label %50, label %44

44:                                               ; preds = %37, %31
  %45 = load i8*, i8** %3, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 0
  %47 = load i8, i8* %46, align 1
  %48 = zext i8 %47 to i32
  %49 = icmp eq i32 %48, 255
  br label %50

50:                                               ; preds = %44, %37, %24, %11, %1
  %51 = phi i1 [ true, %37 ], [ true, %24 ], [ true, %11 ], [ true, %1 ], [ %49, %44 ]
  %52 = zext i1 %51 to i32
  ret i32 %52
}

declare dso_local i32 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
